chore: configure app icon and splash settings

--- a/languages/japanese.json
+++ b/languages/japanese.json
@@ -1,8 +1,8 @@
 {
   "ios": {
-    "CFBundleDisplayName": "あのころ日記"
+    "CFBundleDisplayName": "Re:デイ"
   },
   "android": {
-    "app_name": "あのころ日記"
+    "app_name": "Re:デイ"
   }
 }
